# First_Raytracer

./: CMakeLists.txt  Makefile  README.md  build.sh  conanfile.txt
assets/: axel.json  bad.json  light_plane.json  noMaterial.json  yeet.json
src/: Camera.hpp  Color.hpp  Core.cpp  FrameBuffer.cpp  Material.hpp  Object.hpp  Plane.hpp  Ray.hpp  RayTracer.cpp  RayTracer.hpp  Renderer.hpp  Scene.cpp  Scene.hpp  SfmlLibrary.hpp  Sphere.hpp  Trigonometry.hpp  Vector3.hpp  Viewer.hpp  main.cpp
src/Core/: Core.cpp  Core.hpp
src/Core/Events/: Event.hpp
src/Core/Graphics/: IGraphicalLibrary.hpp
src/Core/Graphics/SFML/: SfmlLibrary.cpp  SfmlLibrary.hpp
src/Lights/: ALight.hpp  ARelativeLight.hpp  AWorldLight.hpp  DirectionalLight.hpp  ILight.hpp  Light.hpp  SphericalLight.hpp
src/Materials/: Material.hpp
src/Materials/Color/: Color.cpp  Color.hpp
src/Materials/Conductors/: Conductor.hpp
src/Materials/Dielectrics/: Dielectric.hpp
src/Maths/: Maths.hpp  Vector3.hpp
src/Objects/: IObject.hpp  Object.hpp
src/Objects/Primitives/: Plane.cpp  Plane.hpp  Sphere.cpp  Sphere.hpp  Triangle.cpp  Triangle.hpp
src/Parser/: JsonParser.cpp  JsonParser.hpp  ObjParser.cpp  ObjParser.hpp  Parser.cpp  Parser.hpp
src/Renderer/: Renderer.cpp  Renderer.hpp
src/Renderer/FrameBuffer/: FrameBuffer.cpp  FrameBuffer.hpp
src/Renderer/RayTracer/: RayTracer.cpp  RayTracer.hpp  ThreadPool.cpp  ThreadPool.hpp
src/Scene/: Scene.cpp  Scene.hpp
src/Textures/: SfmlTexture.cpp  SfmlTexture.hpp  Texture.hpp
src/View/: Resolution.hpp
src/View/Camera/: Camera.cpp  Camera.hpp
src/View/Viewer/: Viewer.cpp  Viewer.hpp
tests/: main.cpp
tests/Lights/: UnitTest_DirectionalLight.cpp  UnitTest_SphericalLight.cpp
tests/Materials/: UnitTest_Color.cpp
tests/Maths/: UnitTest_Trigo.cpp  UnitTest_vector3.cpp
tests/Objects/: UnitTest_Plane.cpp  UnitTest_Sphere.cpp  UnitTest_Triangle.cpp
tests/Parser/: UnitTest_JsonParser.cpp  UnitTest_ObjParser.cpp  UnitTest_Parser.cpp
tests/Scene/: UnitTest_Scene.cpp
tests/View/: UnitTest_Camera.cpp  UnitTest_RayTracer.cpp  UnitTest_Resolution.cpp  UnitTest_Viewer.cpp
